made badge containers fixed size for wrapping

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,9 +12,15 @@ html, body {
 }
 
 .badge-container {
+  -webkit-border-radius: 2px 2px 2px 2px;
+  -moz-border-radius: 2px 2px 2px 2px;
+  -o-border-radius: 2px 2px 2px 2px;
+  border-radius: 2px 2px 2px 2px;
   text-align: center;
   margin-bottom: 20px;
   border: 1px grey solid;
+  width: 275px;
+  height: 295px;
 }
 
 .badge-info {
